@@ -71,6 +71,7 @@
 		<option name='hack_mngwrite' value='0'/>
 		<option name='hack_pinmame' value='0'/>
 		<option name='hack_softwarelist' value='0'/>
+		<option name='hack_nosound' value='0'/>
 	</global>
 	<mess>
 		<option name='executable' value='mess.exe'/>
